# FinAudit

./: .gitignore  CMakeLists.txt  README.md  ROADMAP_RU.md
src/: AboutDialog.h  BasePaymentDocument.h  CustomWidgets.cpp  DatabaseManager.cpp  DatabaseManager.h  ExportManager.cpp  ExportManager.h  ImportManager.cpp  ImportManager.h  Kosgu.h  PaymentDetail.h  PdfReporter.cpp  PlatformUtils.h  Settings.h  UIManager.cpp  UIManager.h  main.cpp
src/views/: BasePaymentsView.cpp  BasePaymentsView.h  BaseView.h  ContractRegistryNumbersView.cpp  ContractRegistryNumbersView.h  ContractsView.cpp  ContractsView.h  CounterpartiesView.cpp  CounterpartiesView.h  ExpenseStructureView.cpp  ExpenseStructureView.h  ImportMapView.cpp  JO4ImportMapView.cpp  JO4ImportMapView.h  KosguView.cpp  KosguView.h  PaymentsView.cpp  PaymentsView.h  ReconciliationView.cpp  ReconciliationView.h  RegexesView.cpp  RegexesView.h  SelectiveCleanView.cpp  SelectiveCleanView.h  SettingsView.cpp  SettingsView.h
tools/test_data_generator/: CMakeLists.txt  TestDataGenerator.cpp
